- Fixed title of the featured product overflowing out of the site on certain resolutions

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -342,7 +342,7 @@ a.product__text {
 }
 
 /* Styles for desktop */
-@media screen and (min-width: 951px) {
+@media screen and (min-width: 1300px) {
   .product__title {
     white-space: nowrap;
   }
